added Palenzuela2023 and IrtizaTripto2023

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -941,6 +941,17 @@
   timestamp = {2023.02.25},
 }
 
+@InProceedings{Alam2020,
+  author    = {Alam, F. and Islam, M. A.},
+  title     = {A Proposed Model for Bengali Named Entity Recognition Using Maximum Entropy Markov Model Incorporated with Rich Linguistic Feature Set},
+  booktitle = {International Conference on Computing Advancements},
+  year      = {2020},
+  pages     = {64},
+  doi       = {10.1145/3377049.3377117},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
 @InProceedings{Alayrac2016,
   author    = {Alayrac, J.-B. and Bojanowski, P. and Agrawal, N. and Sivic, J. and Laptev, I. and Lacoste-Julien, S.},
   title     = {Unsupervised Learning from Narrated Instruction Videos},
@@ -1547,6 +1558,17 @@
   url       = {https://cloud.klmp200.net/index.php/s/f7YRqcW9oAwwLKd},
 }
 
+@InProceedings{Amalvy2023,
+  author    = {Amalvy, A. and Labatut, V. and Dufour, R.},
+  title     = {The Role of Global and Local Context in Named Entity Recognition},
+  booktitle = {61st Annual Meeting of the Association for Computational Linguistics},
+  year      = {2023},
+  pages     = {714-722},
+  doi       = {10.18653/v1/2023.acl-short.62},
+  owner     = {Vincent},
+  timestamp = {2023.05.03},
+}
+
 @Article{Amancio2012,
   author    = {Amancio, D. R. and Oliveira, O. N. and da Fontoura Costa, L.},
   title     = {Three-feature model to reproduce the topology of citation networks and the effects from authors' visibility on their h-index},
@@ -2033,6 +2055,17 @@
   url       = {http://arxiv.org/abs/1511.01964},
 }
 
+@InProceedings{Aparicio2023,
+  author    = {Aparicio, J. T. and Arsenio, E. and Henriques, R.},
+  title     = {{tex2net}: A Package for Storytelling Using Network Models},
+  booktitle = {41st ACM International Conference on Design of Communication},
+  year      = {2023},
+  pages     = {119-125},
+  doi       = {10.1145/3615335.3623022},
+  owner     = {Vincent},
+  timestamp = {2023.10.31},
+}
+
 @Article{Aragon2008,
   author    = {Aragón, J. L. and Naumis, G. G. and Bai, M. and Torres, M. and Maini, P. K.},
   title     = {Turbulent Luminance in Impassioned van Gogh Paintings},
@@ -2375,6 +2408,31 @@
   doi       = {10.1484/M.NAW-EB.5.133057},
   owner     = {Vincent},
   timestamp = {2023.07.22},
+}
+
+@Article{Ashtiani2018,
+  author    = {Ashtiani, M. and Mirzaie, M. and Jafari, M.},
+  title     = {{CINNA}: an {R}/{CRAN} package to decipher Central Informative Nodes in Network Analysis},
+  journal   = {Bioinformatics},
+  year      = {2018},
+  volume    = {35},
+  number    = {8},
+  pages     = {1436–1437},
+  doi       = {10.1093/bioinformatics/bty819},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
+@Article{Ashtiani2018a,
+  author    = {Ashtiani, M. and Salehzadeh-Yazdi, A. and Razaghi-Moghadam, Z. and Hennig, H. and Wolkenhauer, O. and Mirzaie, M. and Jafari, M.},
+  title     = {A systematic survey of centrality measures for protein-protein interaction networks},
+  journal   = {BMC Systems Biology},
+  year      = {2018},
+  volume    = {12},
+  pages     = {80},
+  doi       = {10.1186/s12918-018-0598-2},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
 }
 
 @InCollection{Assmann2008,
@@ -3266,6 +3324,18 @@
   owner     = {Vincent},
   timestamp = {2022.11.28},
   url       = {https://www.jstor.org/stable/3648889},
+}
+
+@InCollection{Banerjee1989,
+  author    = {Banerjee, S.},
+  title     = {Marginalization of women's popular culture in nineteenth century {Bengal}},
+  booktitle = {Recasting women: Essays in colonial history},
+  publisher = {Northern Arizona University},
+  year      = {1989},
+  pages     = {127-179},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://jan.ucc.nau.edu/~sj6/Banerjeewomenspopculture.pdf},
 }
 
 @Book{Banfield1982,
@@ -5053,6 +5123,17 @@
   timestamp = {2014.09.09},
 }
 
+@InProceedings{Bhattacharjee2020,
+  author    = {Bhattacharjee, K. and Ballesteros, M. and Anubhai, R. and Muresan, S. and Ma, J. and Ladhak, F. and Al-Onaizan, Y.},
+  title     = {To {BERT} or Not to {BERT}: Comparing Task-specific and Task-agnostic Semi-Supervised Approaches for Sequence Tagging},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2020},
+  pages     = {7927-7934},
+  doi       = {10.18653/v1/2020.emnlp-main.636},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
 @InProceedings{Bhattacharya2005,
   author    = {Bhattacharya, I. and Getoor, L.},
   title     = {Relational clustering for multi-type entity resolution},
@@ -5362,6 +5443,16 @@
   owner     = {Vincent},
   timestamp = {2020.01.03},
   url       = {https://ieeexplore.ieee.org/document/7526900},
+}
+
+@Book{Bilston2004,
+  title     = {The Awkward Age in Women's Popular Fiction, 1850-1900},
+  publisher = {Oxford University Press},
+  year      = {2004},
+  author    = {Bilston, S.},
+  doi       = {10.1093/acprof:oso/9780199272617.001.0001},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
 }
 
 @InProceedings{Bingenheimer2009,
@@ -9530,6 +9621,17 @@
   url       = {https://www.jstor.org/stable/1343179},
 }
 
+@PhdThesis{Chatterjee2009,
+  author    = {Chatterjee, M.},
+  title     = {Women in the Novels of Bankimchandra Chatterjee, Saratchandra Chatterjee and Rabindranath Tagore},
+  school    = {Saurashtra University},
+  year      = {2009},
+  type      = {PhD. Thesis},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://core.ac.uk/reader/11822203},
+}
+
 @InProceedings{Chaturvedi2012,
   author    = {Chaturvedi, M. and Gannod, G. C. and Mandell, L. and Armstrong, H. and Hodgson, E.},
   title     = {Myopia: A Visualization Tool in Support of Close Reading},
@@ -9617,6 +9719,19 @@
   doi       = {10.1109/CVPR.2009.5206821},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@Article{Chaudhuri1971,
+  author    = {Chaudhuri, Narayan},
+  title     = {Social Changes as Reflected in Bengali Literature},
+  journal   = {Indian Literature},
+  year      = {1971},
+  volume    = {14},
+  number    = {2},
+  pages     = {41-52},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://www.jstor.org/stable/23329828},
 }
 
 @InProceedings{Chen2004,
@@ -10224,7 +10339,7 @@
 
 @Article{Choi2007,
   author    = {Choi, Y.-M. and Kim, H.-J.},
-  title     = {A directed network of greek and roman mythology},
+  title     = {A directed network of {Greek} and {Roman} mythology},
   journal   = {Physica A},
   year      = {2007},
   volume    = {382},
@@ -10277,6 +10392,28 @@
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://dl.acm.org/citation.cfm?id=1944585},
+}
+
+@InProceedings{Chowdhury2014,
+  author    = {Chowdhury, S. and Chowdhury, W.},
+  title     = {Performing sentiment analysis in Bangla microblog posts},
+  booktitle = {International Conference on Informatics, Electronics \& Vision},
+  year      = {2014},
+  pages     = {1-6},
+  doi       = {10.1109/iciev.2014.6850712},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
+@InProceedings{Chowdhury2018,
+  author    = {Chowdhury, S. A. and Alam, F. and Khan, N.},
+  title     = {Towards Bangla Named Entity Recognition},
+  booktitle = {21st International Conference of Computer and Information Technology},
+  year      = {2018},
+  pages     = {1-7},
+  doi       = {10.1109/iccitechn.2018.8631931},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
 }
 
 @Article{Chowdhury2019,
@@ -11105,6 +11242,18 @@
   owner     = {Vincent},
   timestamp = {2022.11.15},
   url       = {https://www.routledge.com/Black-Feminist-Thought-Knowledge-Consciousness-and-the-Politics-of-Empowerment/Collins/p/book/9780415964722},
+}
+
+@Article{Collins2008a,
+  author    = {Collins, M.},
+  title     = {Rabindranath Tagore and Nationalism: An Interpretation},
+  journal   = {Heidelberg Papers in South Asian and Comparative Politics},
+  year      = {2008},
+  volume    = {2008},
+  number    = {42},
+  doi       = {10.11588/HPSAP.2008.42.2210},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
 }
 
 @InProceedings{Collins2009,
@@ -12554,6 +12703,29 @@
   timestamp = {2022.06.21},
 }
 
+@InProceedings{Das2010,
+  author    = {Das, D. and Bandyopadhyay, S.},
+  title     = {Developing bengali wordnet affect for analyzing emotion},
+  booktitle = {International Conference on the Computer Processing of Oriental Languages},
+  year      = {2010},
+  pages     = {35-40},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://www.dasdipankar.com/Main_files/ICCPOL_2010.pdf},
+}
+
+@InProceedings{Das2012,
+  author    = {Das, R. and Das, R.},
+  title     = {The nation and the community: Hindus and muslims in the novels of bankim chandra chatterjee},
+  booktitle = {Proceedings of the Indian History Congress},
+  year      = {2012},
+  volume    = {73},
+  pages     = {578-587},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://www.jstor.org/stable/44156251},
+}
+
 @Article{Das2014,
   author    = {Das, D. and Chen, D. and Martins, A. F. T. and Schneider, N. and Smith, N. A.},
   title     = {Frame-Semantic Parsing},
@@ -13342,6 +13514,16 @@
   doi       = {10.3917/agora.078.0067},
   owner     = {Vincent},
   timestamp = {2021.04.24},
+}
+
+@Book{DeTemmerman2014,
+  title     = {Crafting Characters: Heroes and Heroines in the Ancient Greek Novel},
+  publisher = {Oxford University Press},
+  year      = {2014},
+  author    = {De Temmerman, K.},
+  doi       = {10.1093/acprof:oso/9780199686148.001.0001},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
 }
 
 @Book{Dever2003,
@@ -15036,6 +15218,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://aclweb.org/anthology/papers/P/P13/P13-1012/},
+}
+
+@Article{Dutt1981,
+  author    = {Dutt, A. K. and Dhussa, R.},
+  title     = {Novelist Sarat Chandra's Perception of his Bengali Home Region: A Literary Geographic Study},
+  journal   = {GeoJournal},
+  year      = {1981},
+  volume    = {5},
+  number    = {1},
+  pages     = {41-53},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://www.jstor.org/stable/41142500},
 }
 
 @Article{Dvoretzky1966,
@@ -18008,6 +18203,17 @@
   timestamp = {2022.06.21},
 }
 
+@PhdThesis{Francemone2023,
+  author      = {Francemone, C. J.},
+  title       = {Assessing the boundaries of character interdependence in affective disposition theory},
+  year        = {2023},
+  type        = {PhD Thesis},
+  institution = {Ohio State University},
+  owner       = {Vincent},
+  timestamp   = {2023.10.12},
+  url         = {https://etd.ohiolink.edu/acprod/odb_etd/ws/send_file/send?accession=osu1689002810837904&disposition=inline},
+}
+
 @Article{Franceschet2012,
   author    = {Franceschet, M0},
   title     = {The large-scale structure of journal citation networks},
@@ -18660,6 +18866,17 @@
   doi       = {10.1109/tvcg.2014.2388208},
   owner     = {Vincent},
   timestamp = {2022.06.29},
+}
+
+@Article{Gaedtke2023,
+  author    = {Gaedtke, A.},
+  title     = {Beyond trauma: provisional networks and eccentric forms in fiction of the blitz},
+  journal   = {Textual Practice},
+  year      = {2023},
+  volume    = {in press},
+  doi       = {10.1080/0950236x.2023.2281684},
+  owner     = {Vincent},
+  timestamp = {2023.11.16},
 }
 
 @Electronic{Gaerber2021,
@@ -21298,6 +21515,19 @@
   timestamp = {2022.11.28},
 }
 
+@Article{Grizzard2020,
+  author    = {Grizzard, M. and Francemone, C. J. and Fitzgerald, K. and Huang, J. and Ahn, C.},
+  title     = {Interdependence of Narrative Characters: Implications for Media Theories},
+  journal   = {Journal of Communication},
+  year      = {2020},
+  volume    = {70},
+  number    = {2},
+  pages     = {274–301},
+  doi       = {10.1093/joc/jqaa005},
+  owner     = {Vincent},
+  timestamp = {2023.11.22},
+}
+
 @Book{Grodal1999,
   title     = {Moving pictures: A new theory of film genres, feelings, and cognition},
   publisher = {Oxford University Press},
@@ -21592,6 +21822,19 @@
   timestamp = {2010.06.03},
 }
 
+@Article{Gultepe2023,
+  author    = {Gultepe, E. and Mathangi, V.},
+  title     = {A Quantitative Social Network Analysis of the Character Relationships in the Mahabharata},
+  journal   = {Heritage},
+  year      = {2023},
+  volume    = {6},
+  number    = {11},
+  pages     = {7009-7030},
+  doi       = {10.3390/heritage6110366},
+  owner     = {Vincent},
+  timestamp = {2023.11.01},
+}
+
 @Article{Gulyas2013,
   author    = {Gulyás, L. and Kampis, G. and Legendi, R. O.},
   title     = {Elementary models of dynamic networks},
@@ -21698,6 +21941,16 @@
   doi       = {10.1016/j.physa.2016.01.066},
   owner     = {Vincent},
   timestamp = {2016.02.01},
+}
+
+@Book{Gupta2016a,
+  title     = {The Philosophy of Rabindranath Tagore},
+  publisher = {Routledge},
+  year      = {2016},
+  author    = {Gupta, K. S.},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://www.routledge.com/The-Philosophy-of-Rabindranath-Tagore/Gupta/p/book/9780754630364},
 }
 
 @InProceedings{Gupte2011,
@@ -22281,6 +22534,20 @@
   url       = {http://www.jstatsoft.org/v24/i01},
 }
 
+@InCollection{Handzic2023,
+  author    = {Handzic, M. and Mulavdic, V.},
+  title     = {Broadening the Knowledge Management Horizon: A Case of Distant Reading},
+  booktitle = {Future of Knowledge Management},
+  publisher = {Springer},
+  year      = {2023},
+  volume    = {12},
+  series    = {Knowledge Management and Organizational Learning},
+  pages     = {225-245},
+  doi       = {10.1007/978-3-031-38696-1_12},
+  owner     = {Vincent},
+  timestamp = {2023.11.14},
+}
+
 @Article{Hanjalic1999,
   author    = {Hanjalic, A. and Lagendijk, R. L. and Biemond, J.},
   title     = {Automated high-level movie segmentation for advanced video-retrieval systems},
@@ -22755,6 +23022,20 @@
   owner     = {Vincent},
   timestamp = {2020.03.24},
   url       = {http://ceur-ws.org/Vol-2431/paper2.pdf},
+}
+
+@InProceedings{Hassan2023,
+  author    = {Hassan, T. and McKee, G. T.},
+  title     = {Speaker Identification in Scene-based Segmentation of Stories for Serious Games},
+  booktitle = {Joint International Conference on Serious Games},
+  year      = {2023},
+  volume    = {14309},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {362-369},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-031-44751-8_29},
+  owner     = {Vincent},
+  timestamp = {2023.10.14},
 }
 
 @Article{Hastie1979,
@@ -25280,6 +25561,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.30},
 }
 
+@Book{Inden2005,
+  title     = {Kinship in Bengali culture},
+  publisher = {Orient Blackswan},
+  year      = {2005},
+  author    = {Inden, R. B. and Nicholas, R. W.},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://books.google.fr/books?id=3HUpkDuqhrEC},
+}
+
 @Article{Inglis1938,
   author    = {Inglis, R. A.},
   title     = {An Objective Approach to the Relationship Between Fiction and Society},
@@ -25373,6 +25664,41 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1873951.1874092},
   owner     = {Vincent},
   timestamp = {2019.06.28},
+}
+
+@InProceedings{IrtizaTripto2018,
+  author    = {Irtiza Tripto, N. and Eunus Ali, M.},
+  title     = {Detecting Multilabel Sentiment and Emotions from {Bangla} {YouTube} Comments},
+  booktitle = {International Conference on Bangla Speech and Language Processing},
+  year      = {2018},
+  pages     = {1-6},
+  doi       = {10.1109/icbslp.2018.8554875},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
+@Article{IrtizaTripto2023,
+  author    = {Irtiza Tripto, N. and Eunus Ali, M.},
+  title     = {Understanding Social Structures from Contemporary Literary Fiction using Character Interaction Graph - Half Century Chronology of Influential {Bengali} Writers},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.CL},
+  pages     = {2310.16968},
+  owner     = {Vincent},
+  timestamp = {2023.10.30},
+  url       = {https://arxiv.org/abs/2310.16968},
+}
+
+@Article{IrtizaTripto2023a,
+  author    = {Irtiza Tripto, N. and Eunus Ali, M.},
+  title     = {The Word2vec Graph Model for Author Attribution and Genre Detection in Literary Analysis},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.IR},
+  pages     = {2310.16972},
+  owner     = {Vincent},
+  timestamp = {2023.10.30},
+  url       = {https://arxiv.org/abs/2310.16972},
 }
 
 @Book{Isbell2003,
@@ -26027,6 +26353,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-319-47665-0_37},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@Article{Jarrott2013,
+  author    = {Jarrott, S. E. and McCann, B. R.},
+  title     = {Analysis of Intergenerational Relationships in Adolescent Fiction Using a Contact Theory Framework},
+  journal   = {Gerontology \& Geriatrics Education},
+  year      = {2013},
+  volume    = {34},
+  number    = {3},
+  pages     = {292–308},
+  doi       = {10.1080/02701960.2012.737387},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
 }
 
 @InProceedings{Jassem2017,
@@ -27052,6 +27391,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.15},
 }
 
+@Article{Kagan2020,
+  author    = {Kagan, D. and Chesney, T. and Fire, M.},
+  title     = {Using data science to understand the film industry’s gender gap},
+  journal   = {Palgrave Communications},
+  year      = {2020},
+  volume    = {6},
+  pages     = {92},
+  doi       = {10.1057/s41599-020-0436-1},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
 @Article{Kahan1997,
   author    = {Kahan, T. L. and LaBerge, S. and Levitan, L. and Zimbardo, P.},
   title     = {Similarities and Differences between Dreaming and Waking Cognition: An Exploratory Study},
@@ -27537,6 +27888,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2015.11.07},
 }
 
+@Book{Kaviraj1995,
+  title     = {The Unhappy Consciousness: Bankimchandra Chattopadhyay and the Formation of Discourse in India},
+  publisher = {School of Oriental \& African Studies, University of London},
+  year      = {1995},
+  author    = {Kaviraj, S.},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://books.google.fr/books/?id=xb1jAAAAMAAJ},
+}
+
 @Article{Kayastha2011,
   author    = {Kayastha, N. and Niyato, D. and Wang, P. and Hossain, E.},
   title     = {Applications, Architectures, and Protocol Design Issues for Mobile Social Networks: A Survey},
@@ -27876,6 +28237,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/j.1538-7305.1970.tb01770},
   owner     = {Vincent},
   timestamp = {2012.07.15},
+}
+
+@Article{Keselman2004,
+  author    = {Keselman, H. J. and Othman, A. R. and Wilcox, R. R. and Fradette, K.},
+  title     = {The New and Improved Two-Sample t Test},
+  journal   = {Psychological Science},
+  year      = {2004},
+  volume    = {15},
+  number    = {1},
+  pages     = {47-51},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://www.jstor.org/stable/40063824},
 }
 
 @InProceedings{Kessler1997,
@@ -29345,6 +29719,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.01.21},
 }
 
+@Article{Kowsher2022,
+  author    = {Kowsher, M. and Sami, A. A. and Prottasha, N. J. and Arefin, M. S. and Dhar, P. K. and Koshiba, T.},
+  title     = {Bangla-{BERT}: Transformer-Based Efficient Model for Transfer Learning and Language Understanding},
+  journal   = {IEEE Access},
+  year      = {2022},
+  volume    = {10},
+  pages     = {91855–91870},
+  doi       = {10.1109/access.2022.3197662},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
 @Book{Kozloff2000,
   title     = {Overhearing Film Dialogue},
   publisher = {University of California Press},
@@ -30708,6 +31094,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://psycnet.apa.org/record/2007-04818-000},
+}
+
+@Book{Lande2023,
+  title     = {GPT Semantic Networking: A Dream of the Semantic Web - The Time is Now},
+  publisher = {Ihor Sikorsky National Technical University},
+  year      = {2023},
+  author    = {Lande, D. and Strashnoy , L.},
+  owner     = {Vincent},
+  timestamp = {2023.11.03},
+  url       = {https://ela.kpi.ua/bitstream/123456789/61667/1/Lande_Str_Book.pdf},
 }
 
 @Article{Landesberger2011,
@@ -34860,6 +35256,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/752035},
 }
 
+@Article{Majumder2016,
+  author    = {Majumder, A.},
+  title     = {Can {Bengali} Literature be Postcolonial?},
+  journal   = {Comparative Literature Studies},
+  year      = {2016},
+  volume    = {53},
+  number    = {2},
+  pages     = {417–425},
+  doi       = {10.5325/complitstudies.53.2.0417},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
 @Article{Majumder2017,
   author    = {Majumder, N. and Poria, S. and Gelbukh, A. and Cambria, E.},
   title     = {Deep Learning-Based Document Modeling for Personality Detection from Text},
@@ -34973,6 +35382,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-981-16-4301-9_18},
   owner     = {Vincent},
   timestamp = {2021.10.13},
+}
+
+@InProceedings{Mandal2022,
+  author    = {Mandal, K. P. and Mukheriee, P. and Chakraborty, B.},
+  title     = {Natural Language Query in Bengali to {SQL} Generation Using Named Entity Recognition},
+  booktitle = {IEEE Conference on Interdisciplinary Approaches in Technology and Management for Social Innovation},
+  year      = {2022},
+  pages     = {1-6},
+  doi       = {10.1109/iatmsi56455.2022.10119243},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
 }
 
 @InCollection{Mandelbrot1965,
@@ -36936,6 +37356,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@InProceedings{Mehrotra2013,
+  author    = {Mehrotra, R. and Sanner, S. and Buntine, W. and Xie, L.},
+  title     = {Improving {LDA} topic models for microblogs via tweet pooling and automatic labeling},
+  booktitle = {36th ACM SIGIR International conference on Research and development in information retrieval},
+  year      = {2013},
+  pages     = {889-892},
+  doi       = {10.1145/2484028.2484166},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
 @Article{Mehta2018,
   author    = {Mehta, D. and Haque Siddiqui, M. F. and Javaid, A. Y.},
   title     = {Facial Emotion Recognition: A Survey and Real-World User Experiences in Mixed Reality},
@@ -37005,7 +37436,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.06},
 }
 
-@InCollection{Menand-Doumazane,
+@InCollection{Menand-Doumazane1996,
   author    = {Ménand-Doumazane, F. and Doumazane, F.},
   title     = {La lecture tabulaire de la présence de personnages. Un outil didactique pour l’étude du texte théâtral : l’exemple de Britannicus de Racine},
   booktitle = {Aspects du classicisme et de la spiritualité. Mélanges en l’honneur de Jacques Hennequin},
@@ -39039,6 +39470,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.02.15},
 }
 
+@Article{Mukherjee1985,
+  author    = {Mukherjee, S. N.},
+  title     = {Women's space and women's language in the novels of Bankim Chandra Chatterjee},
+  journal   = {Journal of the Oriental Society of Australia},
+  year      = {1985},
+  volume    = {17},
+  pages     = {64-94},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://search.informit.org/doi/abs/10.3316/informit.675868098885006},
+}
+
 @Book{Mukherji2006,
   title     = {Law and Representation in Early Modern Drama},
   publisher = {Cambridge University Press},
@@ -40853,6 +41296,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2018.06.28},
 }
 
+@Article{NovaParulian2023,
+  author    = {Nova Parulian, N. and Dubnicek, R. and Evans, D. J. and Hu, Y. and Layne-Worthey, G. and Downie, J. S. and Heaton, R. and Lu, K. and Orr, R. I. and Magni, I. and Walsh, J. A.},
+  title     = {Tuning Out the Noise: Benchmarking Entity Extraction for Digitized Native American Literature},
+  journal   = {Proceedings of the Association for Information Science and Technology},
+  year      = {2023},
+  volume    = {60},
+  number    = {1},
+  pages     = {681-685},
+  doi       = {10.1002/pra2.839},
+  owner     = {Vincent},
+  timestamp = {2023.10.27},
+}
+
 @Article{Nowak1999,
   author    = {Nowak, M. A. and Krakauer, D. C.},
   title     = {The evolution of language},
@@ -41696,6 +42152,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/IJCNN.2016.7727719},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Article{Palenzuela2023,
+  author    = {Palenzuela, J. L. L.},
+  title     = {Female Protagonism and Multilingualism in Spanish Byzantine Novels Analysed Using Character Networks},
+  journal   = {International Journal of Humanities and Arts Computing},
+  year      = {2023},
+  volume    = {17},
+  number    = {2},
+  pages     = {168-186},
+  doi       = {10.3366/ijhac.2023.0311},
+  owner     = {Vincent},
+  timestamp = {2023.10.14},
 }
 
 @Article{Palla2005,
@@ -42668,6 +43137,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.23},
 }
 
+@Article{Perc2020,
+  author    = {Perc, M.},
+  title     = {Beauty in artistic expressions through the eyes of networks and physics},
+  journal   = {Journal of The Royal Society Interface},
+  year      = {2020},
+  volume    = {17},
+  number    = {164},
+  pages     = {20190686},
+  doi       = {10.1098/rsif.2019.0686},
+  owner     = {Vincent},
+  timestamp = {2023.11.22},
+}
+
 @Article{Perer2006,
   author    = {Perer, A. and Shneiderman, B.},
   title     = {Balancing Systematic and Flexible Exploration of Social Networks},
@@ -42894,6 +43376,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2020.emnlp-main.672},
   owner     = {Vincent},
   timestamp = {2022.06.28},
+}
+
+@Article{Pethe2023,
+  author    = {Pethe, C. and Kim, A. and Prabhakar, R. and Pial, T. and Skiena, S.},
+  title     = {{StonyBook}: A System and Resource for Large-Scale Analysis of Novels},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.CL},
+  pages     = {2311.03614},
+  owner     = {Vincent},
+  timestamp = {2023.11.12},
+  url       = {https://arxiv.org/abs/2311.03614},
 }
 
 @InProceedings{Petroni2019,
@@ -44229,6 +44723,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/43457910},
 }
 
+@Article{Quayum2015,
+  author    = {Quayum, M. A.},
+  title     = {Hindu–Muslim Relations in the Work of Rabindranath Tagore and Rokeya Sakhawat Hossain},
+  journal   = {South Asia Research},
+  year      = {2015},
+  volume    = {35},
+  number    = {2},
+  pages     = {177–194},
+  doi       = {10.1177/0262728015581288},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
 @InProceedings{Quigley2001,
   author    = {Quigley, A. and Eades, P.},
   title     = {{FADE}: Graph Drawing, Clustering, and Visual Abstraction},
@@ -45420,6 +45927,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/974557.974561},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Book{Reynolds1990,
+  title     = {Girls only?: Gender and popular children’s fiction in Britain, 1880-1910},
+  publisher = {Harvester/Wheatsheaf},
+  year      = {1990},
+  author    = {Reynolds, K.},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://books.google.fr/books/?id=2zxaAAAAMAAJ},
 }
 
 @Article{Reynolds2005,
@@ -47336,6 +47853,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aaai.org/ocs/index.php/ICWSM/09/paper/view/165},
 }
 
+@Article{Sadraddinova2019,
+  author    = {Sadraddinova, T. N. and Nasirli, K. S.},
+  title     = {Literature-mirror of society},
+  journal   = {Scientific Journal},
+  year      = {2019},
+  volume    = {5},
+  pages     = {56-59},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://scientificmagazine.ru/images/PDF/2019/39/literature-mirror.pdf},
+}
+
 @Article{Sagi2013,
   author    = {Sagi, E. and Dehghani, M.},
   title     = {Measuring Moral Rhetoric in Text},
@@ -47680,6 +48209,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Article{SantaMaria2020,
+  author    = {Santa María, M. T. and Calvo Tello, J. and Jiménez, C. M.},
+  title     = {¿Existe correlación entre importancia y centralidad? Evaluación de personajes con redes sociales en obras teatrales de la Edad de Plata},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2020},
+  volume    = {36},
+  number    = {Supplement_1},
+  pages     = {i81-i88},
+  doi       = {10.1093/llc/fqaa015},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
 @Article{Santana2023,
   author    = {Santana, B. and Campos, R. and Amorim, E. and Jorge, A. and Silvano, P. and Nunes, S.},
   title     = {A survey on narrative extraction from textual data},
@@ -47819,6 +48361,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.03.25},
 }
 
+@Article{Sarkar1987,
+  author    = {Sarkar, T.},
+  title     = {Nationalist iconography: Image of women in 19th century Bengali literature},
+  journal   = {Economic and Political Weekly},
+  year      = {1987},
+  volume    = {22},
+  number    = {47},
+  pages     = {2011-2015},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://www.jstor.org/stable/4377759},
+}
+
 @Article{Sarkar2005,
   author    = {Sarkar, P. and Moore, A. W.},
   title     = {Dynamic social network analysis using latent space models},
@@ -47842,6 +48397,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-1-4419-8462-3_3},
   owner     = {Vincent},
   timestamp = {2022.06.22},
+}
+
+@Article{Sarker2021,
+  author    = {Sarker, S.},
+  title     = {{BNLP}: Natural language processing toolkit for Bengali language},
+  journal   = {arXiv},
+  year      = {2021},
+  volume    = {cs.CL},
+  pages     = {2102.00405},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://arxiv.org/abs/2102.00405},
 }
 
 @InProceedings{Sarmento2009,
@@ -49179,6 +49746,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1017/s0028688500015071},
   owner     = {Vincent},
   timestamp = {2021.09.21},
+}
+
+@Book{Sen2002,
+  title     = {Woman and empire: representations in the writings of British India, 1858-1900},
+  publisher = {Orient Blackswan},
+  year      = {2002},
+  author    = {Sen, I.},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://books.google.fr/books?id=uF1j0ZME1tcC},
 }
 
 @Article{SendiaNadal2016,
@@ -51744,6 +52321,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.25},
 }
 
+@Article{Sternberg1981,
+  author    = {Sternberg, M.},
+  title     = {Polylingualism as Reality and Translation as Mimesis},
+  journal   = {Poetics Today},
+  year      = {1981},
+  volume    = {2},
+  number    = {4},
+  pages     = {221},
+  doi       = {10.2307/1772500},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
 @InProceedings{Stevens2012,
   author    = {Stevens, K. and Kegelmeyer, P. and Andrzejewski, D. and Buttler, D.},
   title     = {Exploring topic coherence over many models and many topics},
@@ -52184,14 +52774,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Sugishita2023,
   author    = {Sugishita, K. and Masuda, N.},
-  title     = {Social network analysis of Japanese manga: similarities to real-world social networks and trends over decades},
-  journal   = {arXiv},
+  title     = {Social network analysis of manga: similarities to real-world social networks and trends over decades},
+  journal   = {Applied Network Science},
   year      = {2023},
-  volume    = {physics.soc-ph},
-  pages     = {2303.07208},
+  volume    = {8},
+  pages     = {79},
+  doi       = {10.1007/s41109-023-00604-0},
   owner     = {Vincent},
   timestamp = {2023.03.16},
-  url       = {https://arxiv.org/abs/2303.07208},
 }
 
 @Article{Sugiyama1981,
@@ -52790,7 +53380,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InProceedings{Tan2014a,
   author    = {Tan, M. S. A. and Ujum, E. A. and Ratnavelu, K.},
-  title     = {A character network study of two Sci-Fi {TV} series},
+  title     = {A character network study of two {Sci}-{Fi} {TV} series},
   booktitle = {Frontiers in Physics},
   year      = {2014},
   volume    = {1588},
@@ -55433,9 +56023,11 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   booktitle = {Datafied Society: Social Research in the Age of Big Data},
   publisher = {Amsterdam University Press},
   year      = {2017},
+  chapter   = {11},
+  pages     = {155-170},
+  doi       = {10.1515/9789048531011-014},
   owner     = {Vincent},
   timestamp = {2016.03.02},
-  url       = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3043857},
 }
 
 @Article{Verbrugge1977,
@@ -56983,6 +57575,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2018.11.11},
 }
 
+@InCollection{Weitin2023,
+  author    = {Weitin, T. and Päpcke, S. and Herget, K. and Glawion, A. and Brandes, U.},
+  title     = {Reading at Scale. A Digital Analysis of German Novellas from the 19th Century (Reading at Scale)},
+  booktitle = {Mixing Methods: Practical Insights from the Humanities in the Digital Age},
+  publisher = {Bielefeld University Press},
+  year      = {2023},
+  volume    = {7},
+  series    = {Digital Humanities Research},
+  pages     = {63-78},
+  owner     = {Vincent},
+  timestamp = {2023.10.10},
+  url       = {https://pure.rug.nl/ws/portalfiles/portal/797822183/oa9783839469132SBN1N5XbwIX6n_1_.pdf},
+}
+
 @Article{WeiTingPeng2011,
   author    = {Peng, W.-T. and Chu, W.-T. and Chang, C.-H. and Chou, C.-N. and Huang, W.-J. and Chang, W.-Y. and Hung, Y.-P.},
   title     = {Editing by Viewing: Automatic Home Video Summarization by Viewing Behavior Analysis},
@@ -57243,6 +57849,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=nvfGmD6073cC},
 }
 
+@InCollection{White2002,
+  author    = {White, H.},
+  title     = {The historical text as literary artifact},
+  booktitle = {Narrative dynamics: Essays on time, plot, closure, and frames},
+  publisher = {Routledge},
+  year      = {2002},
+  pages     = {191-210},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://books.google.fr/books?id=HQNC0yGebHoC},
+}
+
 @Book{White2008,
   title     = {Identity and Control: How Social Formations Emerge},
   publisher = {Princeton University Press},
@@ -57344,6 +57962,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-0-387-98141-3},
   owner     = {Vincent},
   timestamp = {2023.03.23},
+}
+
+@Book{Wickham2017,
+  title     = {R for data science: Import, tidy, transform, visualize, and model data},
+  publisher = {O'Reilly},
+  year      = {2017},
+  author    = {Wickham, H. and Grolemund, G.},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+  url       = {https://r4ds.hadley.nz/},
 }
 
 @InProceedings{Wiebe1990,
@@ -57908,6 +58536,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://press.princeton.edu/titles/7622.html},
 }
 
+@InProceedings{Wolyn2023,
+  author    = {Wolyn, S. and Simske, S.},
+  title     = {Character Relationship Mapping in Major Fictional Works Using Text Analysis Methods},
+  booktitle = {ACM Symposium on Document Engineering},
+  year      = {2023},
+  pages     = {13},
+  doi       = {10.1145/3573128.3609345},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
+}
+
 @Book{Womack1989,
   title     = {Improvement and Romance: Constructing the Myth of the Highlands},
   publisher = {Macmillan},
@@ -58464,6 +59103,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.2017.330},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@Article{Xu2017a,
+  author    = {Xu, M. and Fralick, D. and Zheng, J. Z. and Wang, B. and Feng, C.},
+  title     = {The differences and similarities between two-sample t-test and paired t-test},
+  journal   = {Shanghai Archives of Psychiatry},
+  year      = {2017},
+  volume    = {29},
+  number    = {3},
+  pages     = {184-188},
+  doi       = {10.11919/j.issn.1002-0829.217070},
+  owner     = {Vincent},
+  timestamp = {2023.11.25},
 }
 
 @InProceedings{Xu2021,
@@ -60804,6 +61456,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2810249},
   owner     = {Vincent},
   timestamp = {2018.06.12},
+}
+
+@Book{Zweig2016c,
+  title     = {Network Analysis Literacy: A Practical Approach to the Analysis of Networks},
+  publisher = {Springer},
+  year      = {2016},
+  author    = {Zweig, K. A.},
+  series    = {Lecture Notes in Social Networks},
+  doi       = {10.1007/978-3-7091-0741-6},
+  owner     = {Vincent},
+  timestamp = {2019.04.20},
 }
 
 @Book{Zwerdling1986,
